# grafika_projekt

./: .gitignore  23.pdf:Zone.Identifier  CMakeLists.txt  README.md  todo.txt
src/: CMakeLists.txt  main.cpp
src/include/: CMakeLists.txt  GUI.h  GUIMainFrame.h  GUIMyFrame1.h
src/src/: GUI.cpp  GUIMainFrame.cpp  GUIMyFrame1.cpp  zoom.cpp
